feat: add image information (resolution, size, ...)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+bytesize = "2.3.1"
 clap = { version = "4.5", features = ["derive"] }
 clap-serde-derive = "0.2"
 confy = { version = "2.0", features = ["toml_conf"] }
 gpui = { git = "https://github.com/zed-industries/zed" }
+imagesize = "0.14.0"
 serde = "1.0"
 # ashpd broken on wayland, see https://github.com/zed-industries/zed/pull/46543
 # gpui = "0.2.2"
