fix: config parsing and default value handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ clap-serde-derive = "0.2"
 confy = { version = "2.0", features = ["toml_conf"] }
 gpui = { git = "https://github.com/zed-industries/zed" }
 imagesize = "0.14.0"
+paste = "1.0.15"
 serde = "1.0"
+toml = "0.9.11"
 # ashpd broken on wayland, see https://github.com/zed-industries/zed/pull/46543
 # gpui = "0.2.2"
