--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,23 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0"
+# UI
+gpui = { git = "https://github.com/zed-industries/zed" }
+# ashpd broken on wayland, see https://github.com/zed-industries/zed/pull/46543
+# gpui = "0.2.2"
+
+rust-i18n = "3.1"
 bytesize = "2.3.1"
+
+# Image handling
+imagesize = "0.14"
+
+# Configuration
 clap = { version = "4.5", features = ["derive"] }
 clap-serde-derive = "0.2"
 confy = { version = "2.0", features = ["toml_conf"] }
-gpui = { git = "https://github.com/zed-industries/zed" }
-imagesize = "0.14.0"
-paste = "1.0.15"
+paste = "1.0"
 serde = "1.0"
-toml = "0.9.11"
-# ashpd broken on wayland, see https://github.com/zed-industries/zed/pull/46543
-# gpui = "0.2.2"
+
+# Error handling
+anyhow = "1.0"
