--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ bytesize = "2.3.1"
 imagesize = "0.14"
 
 # Configuration
-clap = { version = "4.5", features = ["derive"] }
+clap = { version = "4.5", features = ["derive", "color"] }
 clap-serde-derive = "0.2"
 confy = { version = "2.0", features = ["toml_conf"] }
 paste = "1.0"
@@ -24,3 +24,4 @@ serde = "1.0"
 
 # Error handling
 anyhow = "1.0"
+anstyle = "1.0.13"
