--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,15 @@ serde = "1.0"
 # Error handling
 anyhow = "1.0"
 anstyle = "1.0.13"
+
+[build-dependencies]
+clap = { version = "4.5", features = ["derive"] }
+clap_mangen = "0.2"
+clap-serde-derive = "0.2"
+clap_complete = "4.5.65"
+serde = "1.0"
+paste = "1.0"
+
+[features]
+default = []
+build-time = []
