--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,14 @@ anyhow = "1.0"
 anstyle = "1.0.13"
 
 [build-dependencies]
+# Used for generating manpages, completions and an example config
 clap = { version = "4.5", features = ["derive"] }
 clap_mangen = "0.2"
 clap-serde-derive = "0.2"
 clap_complete = "4.5.65"
 serde = "1.0"
 paste = "1.0"
+toml = "0.9.11"
 
 [features]
 default = []
